--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <title>Nexus</title>
+        <base href="/" />
+        <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/app.css" rel="stylesheet" />
+        <link href="Nexus.Client.styles.css" rel="stylesheet" />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Nexus</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="Nexus.Client.styles.css" rel="stylesheet" />
-</head>
+    <body>
+        <div id="app">
+            <div
+                wire:loading
+                class="
+                    fixed
+                    top-0
+                    left-0
+                    right-0
+                    bottom-0
+                    w-full
+                    h-screen
+                    z-50
+                    overflow-hidden
+                    bg-white
+                    opacity-75
+                    flex
+                    items-center
+                    justify-center
+                "
+            >
+                <div class="h-12 w-12 bg-current rounded-full mr-1 animate-bounce"></div>
+                <div class="h-12 w-12 bg-current rounded-full mr-1 animate-bounce200"></div>
+                <div class="h-12 w-12 bg-current rounded-full animate-bounce400"></div>
+            </div>
+        </div>
 
-<body>
-    <div id="app">Loading...</div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-</body>
-
+        <div
+            id="blazor-error-ui"
+            class="bg-yellow-200 bottom-0 left-0 shadow fixed w-full hidden z-50 pt-2.5 pr-5 pb-3 pl-5"
+        >
+            An unhandled error has occurred.
+            <a href="" class="reload">Reload</a>
+            <a class="cursor-pointer absolute right-3 top-2">🗙</a>
+        </div>
+        <script src="_framework/blazor.webassembly.js"></script>
+    </body>
 </html>
