--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>Nexus</title>
         <base href="/" />
-        <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+        <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />-->
         <link href="css/app.css" rel="stylesheet" />
         <link href="Nexus.Client.styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </head>
 
     <body>
