--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -24,7 +24,7 @@
                     h-screen
                     z-50
                     overflow-hidden
-                    bg-white
+                    bg-red-500
                     opacity-75
                     flex
                     items-center
